--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Formulaire de soumission</title>
+  <title>Formulaire</title>
 </head>
 <body>
-  <h1>Formulaire de soumission</h1>
+  <h1>Formulaire</h1>
 
   <form id="myForm">
     <label for="name">Nom :</label>
