--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <label for="message">Message :</label><br>
     <textarea id="message" name="message" rows="4" required></textarea><br>
 
-    <button type="submit">Soumettre</button>
+    <button type="button" onclick="saveToFile()">Soumettre</button>
   </form>
 </body>
 </html>
