--- a/index.html
+++ b/index.html
@@ -2,12 +2,28 @@
 <html>
 <head>
   <title>Formulaire</title>
+  <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
+  <div class="banner">
+       <h1>Chat</h1>
+      </div>
 </head>
 <body>
   <h1>Formulaire</h1>
 
-  <form id="myForm">
+
+<div class="wrapper">
+
+
+    <div class="container">
+      <!--<nav>
+        <ul>
+          <li><a href="https://chat.zaaq.fr/">Accueil</a></li>
+        </ul>
+      </nav>-->
+
+      <section>
+<form id="myForm">
     <label for="name">Nom :</label>
     <input type="text" id="name" name="name" required><br>
 
@@ -19,5 +35,17 @@
 
     <button type="button" onclick="saveToFile()">Soumettre</button>
   </form>
+
+
+      </section>
+    </div>
+
+    <footer>
+     <input type="text" id="messageInput" placeholder="Saisissez votre message">
+  <button onclick="envoyerMessage()">Envoyer</button>
+    
+    </footer>
+  </div>
+
 </body>
 </html>
