--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
   <div class="banner">
-       <h1>Chat</h1>
+       <h1>Configuration log</h1>
       </div>
 </head>
 <body>
-  <h1>Formulaire</h1>
 
 
 <div class="wrapper">
