--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
 
       <section>
 <form id="myForm">
-    <label for="name">Nom :</label>
+    <label for="name">Identifiant :</label>
     <input type="text" id="name" name="name" required><br>
+  
+    <label for="mdp">Mdp :</label>
+    <input type="text" id="mdp" name="mdp" required><br>
 
     <label for="email">Email :</label>
     <input type="email" id="email" name="email" required><br>
@@ -34,14 +37,13 @@
 
     <button type="button" onclick="saveToFile()">Soumettre</button>
   </form>
+        <p>
 
 
       </section>
     </div>
 
     <footer>
-     <input type="text" id="messageInput" placeholder="Saisissez votre message">
-  <button onclick="envoyerMessage()">Envoyer</button>
     
     </footer>
   </div>
