--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
 
     <button type="button" onclick="saveToFile()">Soumettre</button>
   </form>
-        <p>
+        <p><b>Pour valider la démarche:</b><br>
+          Vous allez recevoir un fichier au format .zq<br>
+          Si vous avez les compétences vous pouvez le déployer<br>
+          Sinon envoyez le mail à l'adresse mail suivante: ## </p>
 
 
       </section>
