--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
       <section>
 <form id="myForm">
-    <label for="name">Identifiant :</label>
+    <label for="name">Identifiant :</label><br>
     <input type="text" id="name" name="name" required><br>
   
-    <label for="mdp">Mdp :</label>
+    <label for="mdp">Mdp :</label><br>
     <input type="text" id="mdp" name="mdp" required><br>
 
-    <label for="email">Email :</label>
+    <label for="email">Email :</label><br>
     <input type="email" id="email" name="email" required><br>
 
     <label for="message">Message :</label><br>
@@ -38,9 +38,9 @@
     <button type="button" onclick="saveToFile()">Soumettre</button>
   </form>
         <p><b>Pour valider la démarche:</b><br>
-          Vous allez recevoir un fichier au format .zq<br>
-          Si vous avez les compétences vous pouvez le déployer<br>
-          Sinon envoyez le mail à l'adresse mail suivante: ## </p>
+          Vous allez recevoir un fichier au format .zq ou bien zq.txt en fonction de votre navigateur<br>
+          Si vous avez les compétences vous pouvez le déployer à l'aide de ce fichier<br>
+          Sinon envoyez le en pièce jointe à l'adresse mail suivante: ## précisant votre démarche</p>
 
 
       </section>
