--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
     <button type="button" onclick="saveToFile()">Soumettre</button>
   </form>
-        <p><b>Pour valider la démarche:</b><br>
-          Vous allez recevoir un fichier au format .zq ou bien zq.txt en fonction de votre navigateur<br>
+        <p><b><br>Pour valider la démarche:</b><br>
+          Vous allez recevoir un fichier au format <b>.zq</b> ou bien <b>zq.txt</b> en fonction de votre navigateur<br>
           Si vous avez les compétences vous pouvez le déployer à l'aide de ce fichier<br>
           Sinon envoyez le en pièce jointe à l'adresse mail suivante: ## précisant votre démarche</p>
 
