--- a/index.html
+++ b/index.html
@@ -17,11 +17,7 @@
 
 
     <div class="container">
-      <!--<nav>
-        <ul>
-          <li><a href="https://chat.zaaq.fr/">Accueil</a></li>
-        </ul>
-      </nav>-->
+
 
       <section>
 <form id="myForm">
@@ -34,9 +30,9 @@
     <label for="email">Email :</label><br>
     <input type="email" id="email" name="email" required><br>
 
-    <label for="message">Message :</label><br>
+   <!-- <label for="message">Message :</label><br>
     <textarea id="message" name="message" rows="4" required></textarea><br>
-
+-->
     <button type="button" onclick="saveToFile()">Soumettre</button>
   </form>
         <p><b><br>Pour valider la démarche:</b><br>
