--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
       <section>
-<form id="myForm">
+<!--<form id="myForm">
     <label for="name">Identifiant :</label><br>
     <input type="text" id="name" name="name" required><br>
   
@@ -33,7 +33,7 @@
    <label for="message">Message :</label><br>
     <textarea id="message" name="message" rows="4" required></textarea><br>
     <button type="button" onclick="saveToFile()">Soumettre</button>
-  </form>
+  </form>-->
         <p><b><br>Pour valider la démarche:</b><br>
           Vous allez recevoir un fichier au format <b>.zq</b> ou bien <b>zq.txt</b> en fonction de votre navigateur<br>
           Si vous avez les compétences vous pouvez le déployer à l'aide de ce fichier<br>
