--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     <textarea id="message" name="message" rows="4" required></textarea><br>
     <button type="button" onclick="saveToFile()">Soumettre</button>
   </form>
-        <p><b><br>Pour valider la démarche:</b><br>
+       <!-- <p><b><br>Pour valider la démarche:</b><br>
           Vous allez recevoir un fichier au format <b>.zq</b> ou bien <b>zq.txt</b> en fonction de votre navigateur<br>
           Si vous avez les compétences vous pouvez le déployer à l'aide de ce fichier<br>
-          Sinon envoyez le en pièce jointe à l'adresse mail suivante: ## précisant votre démarche</p>
+          Sinon envoyez le en pièce jointe à l'adresse mail suivante: ## précisant votre démarche</p> -->
 
 
       </section>
