--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <label for="email">Email :</label><br>
     <input type="email" id="email" name="email" required><br>
 
+   <button type="button" onclick="saveToFile()">Soumettre</button>
+
   
   </form>
        <p><b><br>Pour valider la démarche:</b><br>
